--- a/java/maven/gitmetadatapoc/pom.xml
+++ b/java/maven/gitmetadatapoc/pom.xml
@@ -8,7 +8,6 @@
   <name>gitmetadatapoc</name>
   <url>http://maven.apache.org</url>
   <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>19</maven.compiler.source>
     <maven.compiler.target>19</maven.compiler.target>
   </properties>
@@ -26,15 +25,13 @@
         <groupId>com.datadoghq.gitmetadatapoc</groupId>
         <artifactId>gitmetadatapoc</artifactId>
         <version>1.0-SNAPSHOT</version>
-        <executions>
-          <execution>
-            <phase>package</phase>
-            <configuration>
-              <mainClass>com.datadoghq.gitmetadatapoc.App</mainClass>
-              <attachToBuild>true</attachToBuild>
-            </configuration>
-          </execution>
-        </executions>
+        <configuration>
+          <archive>
+           <manifest>
+             <mainClass>com.datadoghq.gitmetadatapoc.App</mainClass>
+           </manifest>
+          </archive>
+        </configuration>
       </plugin>
     </plugins>
   </build>
