--- a/java/maven/gitmetadatapoc/pom.xml
+++ b/java/maven/gitmetadatapoc/pom.xml
@@ -22,9 +22,9 @@
   <build>
     <plugins>
       <plugin>
-        <groupId>com.datadoghq.gitmetadatapoc</groupId>
-        <artifactId>gitmetadatapoc</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-jar-plugin</artifactId>
+        <version>3.1.0</version>
         <configuration>
           <archive>
            <manifest>
