--- a/java/maven/gitmetadatapoc/pom.xml
+++ b/java/maven/gitmetadatapoc/pom.xml
@@ -18,6 +18,12 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/com.datadoghq/dd-trace-api -->
+    <dependency>
+      <groupId>com.datadoghq</groupId>
+      <artifactId>dd-trace-api</artifactId>
+      <version>1.1.3</version>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
