--- a/java/gradle/app/build.gradle
+++ b/java/gradle/app/build.gradle
@@ -22,6 +22,9 @@ dependencies {
 
     // This dependency is used by the application.
     implementation 'com.google.guava:guava:31.1-jre'
+
+	// https://mvnrepository.com/artifact/com.datadoghq/dd-trace-api
+	implementation group: 'com.datadoghq', name: 'dd-trace-api', version: '1.1.3'
 }
 
 application {
