--- a/java/gradle/app/build.gradle
+++ b/java/gradle/app/build.gradle
@@ -25,6 +25,9 @@ dependencies {
 
 	// https://mvnrepository.com/artifact/com.datadoghq/dd-trace-api
 	implementation group: 'com.datadoghq', name: 'dd-trace-api', version: '1.1.3'
+
+	// https://mvnrepository.com/artifact/io.github.git-commit-id/git-commit-id-maven-plugin
+	implementation group: 'io.github.git-commit-id', name: 'git-commit-id-maven-plugin', version: '5.0.0'
 }
 
 application {
