--- a/nodejs/rollup/gitmetadatapoc/package.json
+++ b/nodejs/rollup/gitmetadatapoc/package.json
@@ -2,5 +2,8 @@
   "type": "module",
   "dependencies": {
     "dd-trace": "^3.9.0"
+  },
+  "devDependencies": {
+    "rollup-plugin-inject-process-env": "^1.3.1"
   }
 }
