--- a/python/hatch/pyproject.toml
+++ b/python/hatch/pyproject.toml
@@ -1,5 +1,5 @@
 [build-system]
-requires = ["hatchling"]
+requires = ["hatchling", "hatch-vcs"]
 build-backend = "hatchling.build"
 
 [project]
@@ -32,7 +32,10 @@ Issues = "https://github.com/unknown/git-metadata-poc/issues"
 Source = "https://github.com/unknown/git-metadata-poc"
 
 [tool.hatch.version]
+source = "vcs"
 path = "git_metadata_poc/__about__.py"
+
+[tool.hatch.metadata.hooks.vcs]
 
 [tool.hatch.envs.default]
 dependencies = [
